# blockcrack

./: CMakeLists.txt  README.md  blocks.c  blocks.h  main.c
assets/: mask_sample.h  sample.cpp  sample.h
include/: blocks.h  util_blocks.h
include/waydroid/: waydroid_comm.h
src/: blocks.c  blocks.h  main.c
utils/: printBlockUtils.c  printBlockUtils.h  util_blocks.c  util_blocks.h  util_print_block.c  util_print_block.h
utils/debug/: debug.h  debug_print_blocks.c
utils/waydroid/: waydroid_comm.c  waydroid_comm.h
utils/waydroid/C/: waydroid_comm.c  waydroid_comm.h
utils/waydroid/python/: get_block_coord.py  get_grid.py  readbuffer.py
utils/waydroid/vision/: get_block.cpp  get_block.py  get_block_coord.cpp  get_block_coord.py  get_bounding_box.hpp  get_grid.cpp  get_grid.py  get_grid_origin.cpp  get_grid_origin.h  internal_vision.cpp  internal_vision.hpp  readbuffer.py  vision.h
